--- a/frontend/client/src/City/City.css
+++ b/frontend/client/src/City/City.css
@@ -2,7 +2,7 @@
 @import url("https://cdn.linearicons.com/free/1.0.0/icon-font.min.css");
 body {
   font-family: 'Montserrat', sans-serif;
-  background: #112233;
+  /*background: #112233;*/
 }
 
 .weather-card {
